--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,70 @@
-.App {
-  text-align: center;
+body, html, #root {
+    height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.container {
+    background: #c2c2d6;
+    height: 100%;
+}
+.calculator {
+    width: 280px;
+    height: 360px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -140px;
+    margin-top: -180px;
+    background: black;
+    padding: 5px;
+ }
+
+.calculator__display-result {
+    height: 20px;
+    width: calc(100% - 5px);
+    text-align: right;
+    color: orange;
+    background: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.calculator__display-input {
+    height: 30px;
+    width: calc(100% - 5px);
+    text-align: right;
+    color: white;
+    background: black;
+    outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+    width: 70px;
+    height: 60px;
+    background: #4d4d4d;
+    color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.math {
+    width: 70px;
+    height: 60px;
+    background: rgb(102, 102, 102);
+    color: white;
+}
+
+.calculator__clear {
+    width: 140px;
+    height: 60px;
+    background-color: rgb(172, 57, 57);
+    color: white;
+}
+
+.calculator__number-zero {
+    width: 140px;
+    height: 60px;
+    background: #4d4d4d;
+    color: white;
+}
+
+.calculator__operator-equal {
+    width: 70px;
+    color: white;
+    background-color: rgb(0, 68, 102);
 }
