--- a/src/App.css
+++ b/src/App.css
@@ -5,66 +5,83 @@ body, html, #root {
 .container {
     background: #c2c2d6;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 .calculator {
-    width: 280px;
-    height: 360px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -140px;
-    margin-top: -180px;
-    background: black;
-    padding: 5px;
+    width: 320px;
+    border: 5px solid #09136b;
  }
 
 .calculator__display-result {
-    height: 20px;
-    width: calc(100% - 5px);
+    height: 30px;
     text-align: right;
     color: orange;
     background: black;
+    font-size: 20px;
 }
 
 .calculator__display-input {
-    height: 30px;
-    width: calc(100% - 5px);
+    height: 40px;
     text-align: right;
     color: white;
     background: black;
-    outline: none;
+    font-size: 30px;
 }
 
 .btn {
-    width: 70px;
-    height: 60px;
-    background: #4d4d4d;
+    position: relative;
+    height: 65px;
+    width: 80px;
     color: white;
+    outline: 1px solid black;
+    border: none;
+    background: #4d4d4d;
+    font-size: 20px;
 }
 
 .math {
-    width: 70px;
-    height: 60px;
-    background: rgb(102, 102, 102);
+    position: relative;
+    height: 65px;
+    width: 80px;
     color: white;
+    outline: 1px solid black;
+    border: none;
+    background: rgb(102, 102, 102);
+    font-size: 20px;
 }
 
 .calculator__clear {
-    width: 140px;
-    height: 60px;
+    width: 160px;
+    height: 65px;
     background-color: rgb(172, 57, 57);
     color: white;
+    flex-grow: 2;
+    font-size: 20px;
+    outline: 1px solid black;
+    border: none;
 }
 
 .calculator__number-zero {
-    width: 140px;
-    height: 60px;
-    background: #4d4d4d;
+    width: 160px;
+    height: 65px;
+    position: relative;
     color: white;
+    outline: 1px solid black;
+    border: none;
+    background: #4d4d4d;
+    font-size: 20px;
 }
 
 .calculator__operator-equal {
-    width: 70px;
+    width: 80px;
+    height: 130px;
     color: white;
+    position: absolute;
     background-color: rgb(0, 68, 102);
+    font-size: 20px;
+    outline: 1px solid black;
+    border: none;
 }
